closure of the gh actions to my org

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
         - { os: windows-2022, ruby: mswin }
         - { os: windows-2022, ruby: ucrt  }
         exclude:
-        # https://github.com/ruby/setup-ruby/issues/496
+        # https://github.com/meta-introspector/setup-ruby/issues/496
         - { os: ubuntu-22.04, ruby: '2.2' }
         # These old Rubies fail to compile on macos-arm-oss (macOS 13, arm64), which is used for ruby/ruby-builder
         - { os: macos-14, ruby: '1.9' }
@@ -65,7 +65,7 @@ jobs:
     name: ${{ matrix.os }} ${{ matrix.ruby }}
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v4
+    - uses: meta-introspector/checkout@v4
 
     - uses: ./
       with:
@@ -166,7 +166,7 @@ jobs:
     name: "Test with no Gemfile"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: meta-introspector/checkout@v4
       - run: rm Gemfile
       - uses: ./
         with:
@@ -188,7 +188,7 @@ jobs:
         - { ruby: '2.3', expected_rubygems_version: '3.3.27' }
         - { ruby: '2.0', expected_rubygems_version: '2.7.11' }
     steps:
-    - uses: actions/checkout@v4
+    - uses: meta-introspector/checkout@v4
     - uses: ./
       with:
         ruby-version: ${{ matrix.ruby }}
@@ -199,7 +199,7 @@ jobs:
     name: "Test rubygems: version upgrades RubyGems to that version if the default is older"
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: meta-introspector/checkout@v4
     - uses: ./
       with:
         ruby-version: '2.6'
@@ -210,7 +210,7 @@ jobs:
     name: "Test rubygems: version noops if the default is newer"
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: meta-introspector/checkout@v4
     - uses: ./
       with:
         ruby-version: '3.1.0'
@@ -221,7 +221,7 @@ jobs:
     name: "Test rubygems: version uses the Bundler installed by the rubygems update"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: meta-introspector/checkout@v4
       - uses: ./
         with:
           ruby-version: '3.1.0'
@@ -233,7 +233,7 @@ jobs:
     name: "Test bundler: 1.x for old Ruby"
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v4
+      - uses: meta-introspector/checkout@v4
       - uses: ./
         with:
           ruby-version: '2.2'
@@ -244,7 +244,7 @@ jobs:
     name: "Test with a major Bundler version"
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: meta-introspector/checkout@v4
     - uses: ./
       with:
         ruby-version: '2.6'
@@ -255,7 +255,7 @@ jobs:
     name: "Test with a minor Bundler version"
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: meta-introspector/checkout@v4
     - uses: ./
       with:
         ruby-version: '2.6'
@@ -266,7 +266,7 @@ jobs:
     name: "Test with an exact Bundler version"
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: meta-introspector/checkout@v4
     - uses: ./
       with:
         ruby-version: '2.6'
@@ -277,7 +277,7 @@ jobs:
     name: "Test with a Bundler pre/rc version"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: meta-introspector/checkout@v4
       - uses: ./
         with:
           ruby-version: '2.6'
@@ -290,7 +290,7 @@ jobs:
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/bundler-dev.gemfile
     steps:
-      - uses: actions/checkout@v4
+      - uses: meta-introspector/checkout@v4
       - uses: ./
         with:
           ruby-version: ruby-head
@@ -302,7 +302,7 @@ jobs:
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/bundler1.gemfile
     steps:
-      - uses: actions/checkout@v4
+      - uses: meta-introspector/checkout@v4
       - uses: ./
         with:
           ruby-version: '2.7'
@@ -320,7 +320,7 @@ jobs:
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
     steps:
-      - uses: actions/checkout@v4
+      - uses: meta-introspector/checkout@v4
       - uses: ./
         with:
           ruby-version: '2.6'
@@ -333,7 +333,7 @@ jobs:
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/nokogiri.gemfile
     steps:
-      - uses: actions/checkout@v4
+      - uses: meta-introspector/checkout@v4
       - uses: ./
         with:
           ruby-version: truffleruby-head
@@ -344,7 +344,7 @@ jobs:
     name: "Test windows-toolchain: none"
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: meta-introspector/checkout@v4
       - uses: ./
         with:
           ruby-version: '2.7'
@@ -356,7 +356,7 @@ jobs:
   lint:
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v4
+    - uses: meta-introspector/checkout@v4
     - run: yarn install
     - run: yarn run package
     - name: Check generated files are up to date
