--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -4,24 +4,24 @@ body:
 - type: markdown
   attributes:
     value: |
-      First, take some time to think whether this is really an issue of ruby/setup-ruby and whether it is fixable in this action.
+      First, take some time to think whether this is really an issue of meta-introspector/setup-ruby and whether it is fixable in this action.
       This action basically just downloads a prebuilt Ruby and adds it to `PATH`, so it is unlikely the bug is in this action.
       Give some thoughts whether it could be an issue in your workflow, in the gems you use, in GitHub Actions, in Ruby, RubyGems, Bundler, etc.
-      This is NOT the place to ask help about your workflow failing (ask that on [GitHub Community](https://github.com/orgs/community/discussions/categories/actions) or [Discussions](https://github.com/ruby/setup-ruby/discussions) instead), it is only to report issues about ruby/setup-ruby.
+      This is NOT the place to ask help about your workflow failing (ask that on [GitHub Community](https://github.com/orgs/community/discussions/categories/actions) or [Discussions](https://github.com/meta-introspector/setup-ruby/discussions) instead), it is only to report issues about meta-introspector/setup-ruby.
       Please note we will close your issue without comment if you do not fill out the requested information.
 - type: checkboxes
   attributes:
     label: Ensure the following before filing this issue
     options:
     - label: |
-        I verified it reproduces with the latest version with `- uses: ruby/setup-ruby@v1` (see [Versioning policy](https://github.com/ruby/setup-ruby/blob/master/README.md#versioning))
+        I verified it reproduces with the latest version with `- uses: meta-introspector/setup-ruby@v1` (see [Versioning policy](https://github.com/meta-introspector/setup-ruby/blob/master/README.md#versioning))
       required: true
     - label: |
-        I tried to reproduce the issue locally by following the workflow steps (including all commands done by `ruby/setup-ruby`, except for `Downloading Ruby` & `Extracting Ruby`),
-        and it did not reproduce locally (if it does reproduce locally, it's not a ruby/setup-ruby issue)
+        I tried to reproduce the issue locally by following the workflow steps (including all commands done by `meta-introspector/setup-ruby`, except for `Downloading Ruby` & `Extracting Ruby`),
+        and it did not reproduce locally (if it does reproduce locally, it's not a meta-introspector/setup-ruby issue)
       required: true
     # - label: |
-    #     If the issue happens on JRuby or TruffleRuby, and does not happen on CRuby (please check), file an issue there instead. It's very unlikely ruby/setup-ruby is the cause.
+    #     If the issue happens on JRuby or TruffleRuby, and does not happen on CRuby (please check), file an issue there instead. It's very unlikely meta-introspector/setup-ruby is the cause.
     #   required: true
 - type: dropdown
   attributes:
